--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 rembg
 segment_anything
+git+https://github.com/facebookresearch/segment-anything.git#egg=segment_anything
 
 # Install Desco following https://github.com/liunian-harold-li/DesCo
