--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+openai
 rembg
-segment_anything
 git+https://github.com/facebookresearch/segment-anything.git#egg=segment_anything
+git+https://github.com/openai/CLIP.git#egg=clip
 
 # Install Desco following https://github.com/liunian-harold-li/DesCo
